[package]
name = "algebraic_robots"
version = "0.0.1"
authors = ["Pau Carre Cardona <pau.carre@gmail.com>"]
edition = "2018"
description = "A library for robotics that focuses on SE3 Lie Group"
license = "MIT"
repository = "https://github.com/paucarre/algebraic_robots"
exclude = ["assets/**/*", ".github/**/*"]

[dependencies]
nalgebra = "0.27.1"
bevy_egui = { version = "0.6.0" }
[lib]
name = "algebraic_robots"
path = "src/lib.rs"

# Tests
arbitrary        = [ "quickcheck" ]
proptest-support = [ "proptest" ]
slow-tests       = []
