[package]
name = "algebraic_robots"
version = "0.0.1"
authors = ["Pau Carre Cardona <pau.carre@gmail.com>"]
edition = "2018"
description = "A library for robotics that focuses on SE3 Lie Group"
license = "MIT"
repository = "https://github.com/paucarre/algebraic_robots"
exclude = ["assets/**/*", ".github/**/*"]

[features]
default = [ "dim3", "render" ]
dim3 = []
render = [ "bevy/render" ]
parallel = [ "rapier3d/parallel" ]
simd-stable = [ "rapier3d/simd-stable" ]
simd-nightly = [ "rapier3d/simd-nightly" ]
wasm-bindgen = [ "rapier3d/wasm-bindgen" ]
serde-serialize = [ "rapier3d/serde-serialize" ]
enhanced-determinism = [ "rapier3d/enhanced-determinism" ]

[dependencies]
#bevy = { version = "0.5"}
bevy = { version = "0.5", default-features = false }
#bevy = { version = "0.5", default-features = false, features = [
#    "render",
#    "bevy_winit",
#    "bevy_wgpu"
#] }
nalgebra = { version = "0.29", features = [ "convert-glam013" ] }
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
rapier3d = { version = "^0.11", default-features = false, features = [ "dim3", "f32" ] }
bevy_rapier3d = "0.11.0"

[dev-dependencies]
bevy_wgpu = "0.5"
bevy_winit = { version = "0.5", features = [ "x11" ] }
#bevy_rapier3d = "0.11.0"
#bevy_winit

#[dependencies]
#bevy = { version = "0.5", default-features = false }
#nalgebra = { version = "0.29", features = [ "convert-glam013" ] }
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
#rapier3d = { version = "^0.11", default-features = false, features = [ "dim3", "f32" ] }
#[dependencies]
#nalgebra = "0.29"
#bevy_egui = { version = "0.6.0" }
#bevy = { version = "0.5", default-features = false }
#bevy = { version = "0.5", default-features = false, features = [
#    "render",
#    "bevy_winit"
#] }
#egui = "0.14.2"
#webbrowser = { version = "0.5.5", optional = true }
#winit = { version = "0.24.0", features = ["x11"], default-features = false }
#rand = "0.8.0"
#bevy_rapier3d = "0.11.0"
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
#rapier3d = { version = "^0.11", default-features = false, features = [ "dim3", "f32" ] }
#nalgebra = { version = "0.29", features = [ "convert-glam013" ] }
# Don't enable the default features because we don't need the ColliderSet/RigidBodySet
#rapier3d = { version = "^0.11", default-features = false, features = [ "dim3", "f32" ] }


[lib]
name = "algebraic_robots"
path = "src/lib.rs"
required-features = [ "dim3" ]

# Tests
arbitrary        = [ "quickcheck" ]
proptest-support = [ "proptest" ]
slow-tests       = []

#[features]
#default = ["manage_clipboard", "open_url"]
#manage_clipboard = ["clipboard", "thread_local"]
#open_url = ["webbrowser"]

#[features]
#default = [ "dim3", "render" ]
#dim3 = []
#render = [ "bevy/render" ]
#parallel = [ "rapier3d/parallel" ]
#simd-stable = [ "rapier3d/simd-stable" ]
#simd-nightly = [ "rapier3d/simd-nightly" ]
#wasm-bindgen = [ "rapier3d/wasm-bindgen" ]
#serde-serialize = [ "rapier3d/serde-serialize" ]
#enhanced-determinism = [ "rapier3d/enhanced-determinism" ]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clipboard = { version = "0.5.0", optional = true }
thread_local = { version = "1.1.0", optional = true }

#[dev-dependencies]
#version-sync = "0.9.2"
#bevy_wgpu = "0.5"
#bevy_winit = { version = "0.5", features = [ "x11" ] }


#[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
#bevy = { version = "0.5", default-features = false, features = [
##    "bevy_wgpu",
#    "x11",
#    "png"
#] }