[package]
name = "algebraic_robots"
version = "0.0.1"
authors = ["Pau Carre Cardona <pau.carre@gmail.com>"]
edition = "2018"
description = "A library for robotics that focuses on SE3 Lie Group"
license = "MIT"
repository = "https://github.com/paucarre/algebraic_robots"
exclude = ["assets/**/*", ".github/**/*"]

[dependencies]
nalgebra = "0.27.1"
bevy_egui = { version = "0.6.0" }
bevy = { version = "0.5", default-features = false, features = [
    "render",
    "bevy_winit"
] }
egui = "0.14.2"
webbrowser = { version = "0.5.5", optional = true }
winit = { version = "0.24.0", features = ["x11"], default-features = false }
rand = "0.8.0"
bevy_prototype_debug_lines = "0.3.3"

[lib]
name = "algebraic_robots"
path = "src/lib.rs"

# Tests
arbitrary        = [ "quickcheck" ]
proptest-support = [ "proptest" ]
slow-tests       = []

[features]
default = ["manage_clipboard", "open_url"]
manage_clipboard = ["clipboard", "thread_local"]
open_url = ["webbrowser"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clipboard = { version = "0.5.0", optional = true }
thread_local = { version = "1.1.0", optional = true }

[dev-dependencies]
version-sync = "0.9.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
bevy = { version = "0.5", default-features = false, features = [
    "bevy_wgpu",
    "x11",
    "png"
] }